public/css/style.css
          @import url(https://fonts.googleapis.com/css?family=Raleway:500);
body {
  width: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: rgb(230, 84, 73);
  font-family: 'Raleway', sans-serif;
}
body h1 {
  text-align: center;
  margin-top: 35px;
  color: #333;
  letter-spacing: 1px;
}
#overlay {
  position: fixed; /* Sit on top of the page content */
  display: none; /* Hidden by default */
  width: 100%; /* Full width (cover the whole page) */
  height: 100%; /* Full height (cover the whole page) */
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.815); /* Black background with opacity */
  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
  cursor: pointer; /* Add a pointer on hover */
}
.nav {
  height: 100%;
  position: fixed;
  left: -2em;
  top: 0;
  z-index: 1000;
  transform-style: preserve-3d;
  perspective: 1000px;
}
#containerA:hover + #overlay{
    display:block;
}
#containerB{
    background-color: rgb(230, 84, 73);
    transform:translateX(2vw);
    text-align: center;
    
}

.icon {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 990;
  height: 100%;
  background: #262626;
}
.icon li {
  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
  list-style-type: none;
}
.icon a {
  display: block;
  width: 64px;
  height: 64px;
  line-height: 64px;
  text-align: center;
  transform: translate(-7%, 35%);
  font-size: 2.6em;
  color: #999;
  text-shadow: 0 1px 0 black;
  transition: all 0.5s ease-out;
}
.icon a:hover {
  color: white;
  transform: scale(1.05);
}
.nav:hover .text {
  transform: rotateY(0deg);
}
.text {
  position: absolute;
  left: 63px;
  top: 0;
  z-index: 980;
  height: 100%;
  background: #262626;
  border-right: 1px solid rgba(0, 0, 0, 0.3);
  transition: transform 0.24s linear;
  backface-visibility: hidden;
  transform-origin: left;
  transform: perspective(1000px) rotateY(90deg);
}
.text li {
  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
}
.text a {
  display: block;
  width: 200px;
  height: 64px;
  line-height: 64px;
  text-indent: 1em;
  font-size: 1.4em;
  text-decoration: none;
  color: #999;
  text-shadow: 0 1px 0 black;
  transition: all 0.5s ease;
}
.text a:hover {
  color: white;
  transform: translateX(-14px);
}
.nav:hover .info {
  left: 0;
  opacity: 1;
  transition: opacity 0.5s ease-in 0.1s;
}
.info {
  position: absolute;
  padding-left: 2em;
  bottom: 30px;
  z-index: 999;
  width: 264px;
  color: white;
  text-align: center;
  line-height: 1.6;
  opacity: 0;
}
.info .logo p {
  width: 100px;
  height: 100px;
  margin: 0 auto;
  background: #262626;
  color: #424242;
  opacity: 0.6;
  overflow: hidden;
  text-align: center;
  transition: all 0.5s ease;
  font-size: 2em;
  text-shadow: -1px -1px #4f4f4f, 1px 1px #121212;
}
.info .logo p:hover {
  opacity: 1;
  color: white;
  text-shadow: -1px -1px #575757, 1px 1px #121212;
}
.info .name {
  font-size: 2em;
  font-weight: bold;
  letter-spacing: 2px;
  color: #424242;
  text-shadow: -1px -1px #4f4f4f, 1px 1px #121212;
}
.info .quote {
  color: #444;
  text-shadow: 1px 1px #121212;
}
.info .social a {
  font-size: 2em;
  color: #333;
  letter-spacing: 0.5em;
  text-shadow: 1px 1px #454545, -1px -1px #121212;
  transition: all 0.5s ease;
}
.info .social a:hover {
  color: white;
  text-shadow: -1px -1px #575757, 1px 1px #121212;
}

/* 
 Only added a nav query for height bc width is fine 
 (covers full width of viewport from 270px) down to 220px.  
 Bottom nav info section is hidden when screen height 
 hits 550px or below.  Nav still functions as a fly-out  
 */
@media screen and (max-height: 550px) {
  .info {
    display: none;
  }
}
@media screen and (max-width: 450px) {
  h1 {
    font-size: 7.5vw;
  }
}

.ml7 {
  position: relative;
  font-weight: 900;
  font-size: 3.7em;
}
.ml7 .text-wrapper {
  position: relative;
  display: inline-block;
  padding-top: 0.2em;
  padding-right: 0.05em;
  padding-bottom: 0.1em;
  overflow: hidden;
}
.ml7 .letter {
  transform-origin: 0 100%;
  display: inline-block;
  line-height: 1em;
}

